# IAMSentry

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SECURITY.md  config.template.yaml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_iamsentry.py  setup.cfg  setup.sh
.github/workflows/: ci.yml
IAMSentry/: README_CONFIG.md  REMEDIATION_README.md  __init__.py  __main__.py  analyze_all_service_accounts.py  analyze_all_service_accounts_v2.py  analyze_recommendations.py  audit.py  audit_log_permission_analyzer.py  baseconfig.py  batch_audit_analysis.py  cli.py  config_models.py  constants.py  create_fresh_results.py  deploy_custom_roles.py  developer-group-role.yaml  enhanced_config_example.yaml  enhanced_runner.py  errors.txt  example_config.yaml  fresh_service_account_analysis_report.md  gitlab_custom_role.yaml  gitlab_iam_bindings.sh  iam_recommendations_report.csv  implementation_plan.md  ioworkers.py  manager.py  metrics.py  migration_commands.sh  output.txt  role_analysis_report.csv  run_iamsentry.py  service_account_analysis_report.md  simple_runner.py  sql-developer-role.yaml  sql_developer_role.yaml  updated_compute_sa_optimization.sh  workers.py
IAMSentry/alerts/: __init__.py
IAMSentry/dashboard/: __init__.py  auth.py  server.py
IAMSentry/helpers/: __init__.py  hcmd.py  hconfigs.py  hemails.py  hlogging.py  hsecrets.py  util.py
IAMSentry/models/: __init__.py  applyrecommendationmodel.py  iamriskscore.py
IAMSentry/plugins/: __init__.py  util_plugins.py
IAMSentry/plugins/files/: filestore.py
IAMSentry/plugins/gcp/: __init__.py  base.py  gcpcloud.py  gcpcloudiam.py  gcpiam_remediation.py  util_gcp.py
custom_roles/: custom_compute_monitor.yaml  custom_container_viewer.yaml  custom_monitoring_writer.yaml  custom_secret_reader.yaml  custom_service_account_user.yaml  custom_storage_reader.yaml
deploy/cloudrun/: README.md  deploy.sh
deploy/cloudrun/terraform/: .gitignore  main.tf  terraform.tfvars.example  variables.tf
deploy/helm/iamsentry/: Chart.yaml  README.md  values.yaml
deploy/helm/iamsentry/templates/: NOTES.txt  _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  pvc.yaml  secret.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
docs/: IAMSENTRY_ANALYSIS_REPORT.md  IAMSENTRY_IMPLEMENTATION_PLAN.md  OVERWATCH_INTEGRATION.md  README.md
tests/: __init__.py  conftest.py  test_auth_and_audit.py  test_cli.py  test_config_models.py  test_dashboard.py  test_gcp_utils.py  test_helpers.py
