[metadata]
name = iamsentry
version = attr: IAMSentry.__version__
description = GCP IAM Security Auditor and Remediation Tool
long_description = file: README.md
long_description_content_type = text/markdown
author = Documo DevOps
author_email = devops@documo.com
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: System Administrators
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Security

[options]
packages = find:
python_requires = >=3.9
install_requires =
    google-auth>=2.0.0
    google-api-python-client>=2.0.0
    google-cloud-secret-manager>=2.0.0
    PyYAML>=6.0
    pydantic>=2.0.0
    schedule>=1.0.0

[options.packages.find]
include = IAMSentry*

[options.entry_points]
console_scripts =
    iamsentry = IAMSentry.manager:main

[flake8]
max-line-length = 100
exclude = .git,.venv,__pycache__,build,dist
ignore = E203,W503

[tool:pytest]
testpaths = tests
python_files = test_*.py

[coverage:run]
source = IAMSentry
branch = True

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
